<resources>
    <string name="app_name">BlockID Demo</string>
    <string name="app_project_id">932edbeee51ba767c6e1fb7947b92c39</string>
    <string name="label_register_default_tenant">Register Default Tenant</string>
    <string name="label_device_auth">Device Auth</string>
    <string name="label_device_auth_enrolled">Device auth enrolled</string>
    <string name="label_unlock_sdk">Unlock SDK</string>
    <string name="label_login_successfully">Login Successfully</string>
    <string name="label_driver_license_1">Drivers License 1</string>
    <string name="label_driver_license_with_verification">Drivers License with Verification</string>
    <string name="label_passport1">Passport 1</string>
    <string name="label_passport2">Passport 2</string>
    <string name="label_app_pin">App Pin</string>
    <string name="label_national_id_1">National ID 1</string>
    <string name="label_reset_app">Reset App</string>
    <string name="label_please_wait">Please wait...</string>
    <string name="label_error">Error</string>
    <string name="label_retry">Retry</string>
    <string name="label_liveid_active">LiveID Active</string>
    <string name="label_liveid_passive">LiveID Passive</string>
    <string name="label_enroll_liveid">Enroll LiveID</string>
    <string name="label_login_with_qr">Login with QR</string>
    <string name="label_liveid_camera_permission_alert">Please note that you will not be able to
        secure your accounts with BlockID Sample and proceed until you have enrolled in LiveID.</string>
    <string name="label_liveid_please_blink_your_eyes">Please blink your eyes</string>
    <string name="label_liveid_please_smile">Please smile</string>
    <string name="label_liveid_look_right">Please turn right</string>
    <string name="label_liveid_look_left">Please turn left</string>
    <string name="label_liveid_look_up">Please look up</string>
    <string name="label_liveid_look_bottom">Please look bottom</string>
    <string name="label_scanning_complete">Scanning Complete</string>
    <string name="label_reset_expression">Wrong expression resetting</string>
    <string name="label_face_out_of_bounds">Please align face properly</string>
    <string name="label_biometric_auth">Biometric authentication</string>
    <string name="label_biometric_auth_enroll">Do you want to allow this app to use biometric authentication?</string>
    <string name="label_biometric_auth_req">Biometric authentication required to proceed</string>
    <string name="label_success">Success</string>
    <string name="label_liveid_enrolled_successfully">LiveId enrolled successfully.</string>
    <string name="label_passport_enrolled_successfully">Passport enrolled successfully.</string>
    <string name="label_nid_enrolled_successfully">National ID enrolled successfully.</string>
    <string name="label_document_enrolled_successfully">Document enrolled successfully.</string>
    <string name="label_dl_enrolled_successfully">Drivers License enrolled successfully.</string>
    <string name="label_ssn_enrolled_successfully">Social Security Number enrolled successfully.</string>
    <string name="label_enroll_driver_license">Enroll Drivers License</string>
    <string name="label_enroll_passport">Enroll Passport</string>
    <string name="label_scan_passport">Scan photo page of passport</string>
    <string name="label_camera_permission_alert">Please note that you will not be able to scan any
        of your documents with BlockID Sample and verify your identity unless you permit access
        to the camera.</string>
    <string name="label_error_code">Error code:</string>
    <string name="label_passport_fail_to_scan">Passport fail to scan.</string>
    <string name="label_doc_about_to_expire_1">This Document is Expiring within</string>
    <string name="label_doc_about_to_expire_2">days, Would you still like to enroll it?</string>
    <string name="label_e_passport_chip_scan">e-Passport chip scan</string>
    <string name="label_scan_rfid">Scan RFID</string>
    <string name="label_skip">Skip</string>
    <string name="label_please_scan_e_passport">Please scan your e-Passport chip.</string>
    <string name="label_warning">Warning!</string>
    <string name="label_do_you_want_to_cancel_rfid">Do you want to cancel RFID Scan?</string>
    <string name="label_timeout">Timeout</string>
    <string name="label_scan_again">Scan Again</string>
    <string name="label_fetching_data_pls_wait">Fetching data. Please wait.</string>
    <string name="label_hold_your_mobile">Hold your mobile near the Passport</string>
    <string name="label_you_have_successfully_authenticated_to_log_in">You have successfully
        authenticated.</string>
    <string name="label_authenticate">Authenticate</string>
    <string name="label_authenticate_web">Authenticate (Web)</string>
    <string name="label_invalid_code">Invalid Code</string>
    <string name="label_unsupported_qr_code">Unsupported QR code detected.</string>
    <string name="label_scan_qr_code">Scan QR Code</string>
    <string name="label_remove_pp">Do you want to remove Passport?</string>
    <string name="label_remove_nid">Do you want to remove National ID?</string>
    <string name="label_remove_dl">Do you want to remove Drivers License?</string>
    <string name="label_remove_pin">Do you want to remove App pin?</string>
    <string name="label_do_you_want_reset_app">Do you want to reset App?</string>
    <string name="label_remove_dl_title">Drivers License Removal!</string>
    <string name="label_remove_pp_title">Passport Removal!</string>
    <string name="label_remove_nid_title">National ID Removal!</string>
    <string name="label_remove_pin_title">App Pin Removal!</string>
    <string name="label_yes">Yes</string>
    <string name="label_no">No</string>
    <string name="label_ok">OK</string>
    <string name="label_done">Done</string>
    <string name="label_details">Details</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_enroll_pin_id">Enroll PIN</string>
    <string name="label_enter_pin">Enter new PIN</string>
    <string name="label_confirm_your_pin">Confirm new PIN</string>
    <string name="error_incorrect_pin">Incorrect PIN</string>
    <string name="label_pin_enrollment_success">PIN enrollment successful.</string>
    <string name="label_pin_registration_failed">PIN registration failed</string>
    <string name="label_enable_foll_method">Please enable the following \n method for future login.</string>
    <string name="label_touch_id_face_id">TouchID / FaceID</string>
    <string name="label_your_are_offline">You are offline!</string>
    <string name="label_login_with">Login with</string>
    <string name="label_please_check_your_internet_connection">Please check your internet Connection.</string>
    <string name="label_enroll_device_uth_to_unlock_sdk">Enroll device auth to unlock sdk.</string>
    <string name="label_enroll_national_id">Enroll National ID</string>
    <string name="label_verify_pin_id">Verify PIN</string>
    <string name="label_enter_your_pin">Enter your PIN</string>
    <string name="label_enter_preset_qr_data">Enter preset qr data</string>
    <string name="label_scan_back">Scan Back</string>
    <string name="label_back">Back</string>
    <string name="label_authenticating_please_wait">Authenticating, please wait...</string>
    <string name="label_scanning">Scanning...</string>
    <string name="label_scan_complete">Scan complete</string>
    <string name="cancellation_warning">Cancellation Warning</string>
    <string name="label_do_you_want_to_cancel_the_registration_process">Do you want to cancel the
        registration process?</string>
    <string name="label_scan_front">Scan Front</string>
    <string name="label_permission_alert">Permission Alert</string>
    <string name="label_you_have_denied">You have denied the permission, please allow permission.</string>
    <string name="label_restore_account">Restore Account</string>
    <string name="label_restore_acc">Restore Account</string>
    <string name="label_recover_mnemonic">Recover Mnemonic</string>
    <string name="label_enroll_ssn">Verify SSN</string>
    <string name="label_copy_phrases">Copy phrases</string>
    <string name="label_mnemonic_copy_success">Mnemonic phrase has been copied.</string>
    <string name="label_enter_12_phrase">Please enter all 12 mnemonic phrase.</string>
    <string name="label_security_phrase_error">Security phrase error. Try again.</string>
    <string name="label_account_restoration_failed">Account restoration failed</string>
    <string name="label_many_faces">Many faces</string>
    <string name="label_verify_driver_license">Verify Drivers License</string>
    <string name="label_do_you_want_to_verify_driver_license">Do you want to verify Drivers License?</string>
    <string name="label_verifying_driver_license">Verifying Drivers License</string>
    <string name="label_verifying_ssn">Verifying Social Security Number</string>
    <string name="label_registering_driver_license">Registering Drivers License</string>
    <string name="ssn_consent">I attest that the information I have provided is correct and accept
        the use of Fair Credit Reporting Act data to verify my identity.</string>
    <string name="ssn_verification_heading">SSN Verification</string>
    <string name="ssn_required_text">SSN*</string>
    <string name="birth_date_required_text">Birth Date*</string>
    <string name="continue_text">Continue</string>
    <string name="ssn_verification_failed_no_match">The information you provided does not match the
        records.</string>
    <string name="ssn_verification_success">Your Social Security Number has been verified.</string>
    <string name="bad_data">There is some error in the request data.</string>
    <string name="label_storage_permission_alert">Please note that you will not be able to read or
        write any of your documents with BlockID Sample into your storage.</string>
    <string name="label_share">Share</string>
    <string name="label_verify_liveid">Verifying LiveID</string>
    <string name="label_fido2">FIDO2</string>
    <string name="label_fido2_pin_management">FIDO2 PIN Management</string>
    <string name="label_user_name">Username</string>
    <string name="label_register">Register (Web)</string>
    <string name="label_enter_username">Enter username</string>
    <string name="label_fido2_key_has_been_successfully_registered">Your FIDO2 key has been
        successfully registered.</string>
    <string name="label_fido2_key_registration_failed">FIDO2 key registration
        failed.</string>
    <string name="label_successfully_authenticated_with_your_fido2_key">You have successfully
        authenticated with your FIDO2 key.</string>
    <string name="label_authentication_failed">Authentication failed</string>
    <string name="label_platform_key_registered">Platform key registered successfully.</string>
    <string name="label_tap_to_check">Is PIN Configured</string>
    <string name="label_set_pin">Set PIN</string>
    <string name="label_change_pin">Change PIN</string>
    <string name="label_reset">Reset FIDO</string>
    <string name="label_welcome">Welcome</string>
    <string name="label_register_platform_authenticator">Register (Platform Authenticator)</string>
    <string name="label_register_external_authenticator">Register (External Authenticator)</string>
    <string name="label_register_external_authenticator_with_pin">Register (External Authenticator with PIN)</string>
    <string name="label_authenticate_platform_authenticator">Authenticate (Platform Authenticator)</string>
    <string name="label_authenticate_external_authenticator">Authenticate (External Authenticator)</string>
    <string name="label_authenticate_external_authenticator_with_pin">Authenticate (External Authenticator with PIN)</string>
    <string name="label_remove_account">Remove Account</string>
</resources>