<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="@dimen/dimen_20dp"
    android:paddingEnd="@dimen/dimen_20dp"
    android:paddingStart="@dimen/dimen_20dp"
    >

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_permission_icon"
        android:layout_width="@dimen/dimen_26dp"
        android:layout_height="@dimen/dimen_26dp"
        android:src="@drawable/ic_permission"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_permission_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:text="@string/label_permission_alert"
        android:textSize="@dimen/dimen_20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/iv_permission_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_permission_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:text="@string/label_you_have_denied"
        android:textSize="@dimen/dimen_16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_permission_dialog_title" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_permission_dialog_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:text="@string/label_cancel"
        app:layout_constraintEnd_toStartOf="@+id/btn_permission_dialog_ok"
        app:layout_constraintTop_toBottomOf="@+id/tv_permission_dialog" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_marginTop="@dimen/dimen_10dp"
        android:id="@+id/btn_permission_dialog_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="@string/label_ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_permission_dialog" />
</androidx.constraintlayout.widget.ConstraintLayout>