<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.userManagement.UserOptionsActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_back_user"
        android:layout_width="@dimen/dimen_25dp"
        android:layout_height="@dimen/dimen_25dp"
        android:layout_marginStart="@dimen/dimen_10dp"
        android:layout_marginTop="@dimen/dimen_15dp"
        android:padding="@dimen/dimen_5dp"
        android:src="@drawable/icon_backarrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_title_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_20dp"
        android:text="@string/label_welcome"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_28sp"
        app:layout_constraintBottom_toBottomOf="@id/img_back_user"
        app:layout_constraintStart_toEndOf="@id/img_back_user"
        app:layout_constraintTop_toTopOf="@id/img_back_user" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register_platform_authenticator"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_25dp"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:layout_marginBottom="@dimen/dimen_24dp"
        android:background="@color/black"
        android:text="@string/label_register_platform_authenticator"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/dimen_16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title_user" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_authenticate_platform_authenticator"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_25dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginBottom="@dimen/dimen_24dp"
        android:background="@color/black"
        android:text="@string/label_authenticate_platform_authenticator"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/dimen_16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_register_platform_authenticator" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register_external_authenticator"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_25dp"
        android:layout_marginTop="@dimen/dimen_30dp"
        android:layout_marginBottom="@dimen/dimen_24dp"
        android:background="@color/black"
        android:text="@string/label_register_external_authenticator"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/dimen_16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_authenticate_platform_authenticator" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_authenticate_external_authenticator"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_25dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginBottom="@dimen/dimen_24dp"
        android:background="@color/black"
        android:text="@string/label_authenticate_external_authenticator"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/dimen_16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_register_external_authenticator" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register_external_authenticator_with_pin"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_25dp"
        android:layout_marginTop="@dimen/dimen_30dp"
        android:layout_marginBottom="@dimen/dimen_24dp"
        android:background="@color/black"
        android:text="@string/label_register_external_authenticator_with_pin"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/dimen_16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_authenticate_external_authenticator" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_authenticate_external_authenticator_with_pin"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_25dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginBottom="@dimen/dimen_24dp"
        android:background="@color/black"
        android:text="@string/label_authenticate_external_authenticator_with_pin"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/dimen_16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_register_external_authenticator_with_pin" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_remove_account"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_25dp"
        android:layout_marginTop="@dimen/dimen_30dp"
        android:layout_marginBottom="@dimen/dimen_24dp"
        android:background="@color/primary1"
        android:text="@string/label_remove_account"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_authenticate_external_authenticator_with_pin" />
</androidx.constraintlayout.widget.ConstraintLayout>